# groth16-wasm

./: Cargo.toml  readme.md
src/: bn.rs  bn128.rs  bn254.rs  lib.rs
tests/: circom.rs  circom128.rs  circom254.rs
